--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - lootify-net
+      - lootify-network
 
   users-db:
     image: postgres:16-alpine
@@ -38,7 +38,7 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - lootify-net
+      - lootify-network
 
   bets-db:
     image: postgres:16-alpine
@@ -57,64 +57,148 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - lootify-net
+      - lootify-network
 
   # ===============================
   # Serviços Elixir
   # ===============================
-  users:
-    build: ./lootify-users
-    container_name: users
-    hostname: users.lootify.local
-    environment:
-      - RELEASE_DISTRIBUTION=name
-      - RELEASE_NODE=users@users.lootify.local
-      - COOKIE=lootify_cookie
-      - DATABASE_URL=ecto://postgres:postgres@postgres/users
-    depends_on:
-      - users-db
-    networks:
-      - lootify-net
-
   wallets:
-    build: ./lootify-wallets
-    container_name: wallets
+    build:
+      context: ./lootify_wallets
+      dockerfile: Dockerfile
+    container_name: lootify-wallets
     hostname: wallets.lootify.local
     environment:
-      - RELEASE_DISTRIBUTION=name
-      - RELEASE_NODE=wallets@wallets.lootify.local
-      - COOKIE=lootify_cookie
-      - DATABASE_URL=ecto://postgres:postgres@postgres/wallets
+      DATABASE_URL: ecto://postgres:postgres@wallets-db:5432/lootify_wallets_dev
+      POOL_SIZE: "10"
+      ERLANG_COOKIE: lootify_super_secret_cookie
+      # Configuração de rede Erlang
+      ELIXIR_ERL_OPTIONS: "-kernel inet_dist_listen_min 9000 inet_dist_listen_max 9010"
+    expose:
+      - "4369"
+      - "9000"
+      - "9001"
+      - "9002"
+      - "9003"
+      - "9004"
+      - "9005"
+      - "9006"
+      - "9007"
+      - "9008"
+      - "9009"
+      - "9010" 
     depends_on:
-      - wallets-db
+      wallets-db:
+        condition: service_healthy
     networks:
-      - lootify-net
+      lootify-network:
+        aliases:
+          - wallets.lootify.local
+    restart: unless-stopped
+
+  users:
+    build:
+      context: ./lootify_users
+      dockerfile: Dockerfile
+    container_name: lootify-users
+    hostname: users.lootify.local
+    environment:
+      DATABASE_URL: ecto://postgres:postgres@users-db:5432/lootify_users_dev
+      POOL_SIZE: "10"
+      ERLANG_COOKIE: lootify_super_secret_cookie
+      GUARDIAN_SECRET_KEY: super_secret_key_for_jwt_tokens_change_in_production
+      ELIXIR_ERL_OPTIONS: "-kernel inet_dist_listen_min 9000 inet_dist_listen_max 9010"
+    expose:
+      - "4369"
+      - "9000"
+      - "9001"
+      - "9002"
+      - "9003"
+      - "9004"
+      - "9005"
+      - "9006"
+      - "9007"
+      - "9008"
+      - "9009"
+      - "9010"
+    depends_on:
+      users-db:
+        condition: service_healthy
+    networks:
+      lootify-network:
+        aliases:
+          - users.lootify.local
+    restart: unless-stopped
 
   bets:
-    build: ./lootify-bets
-    container_name: bets
+    build:
+      context: ./lootify_bets
+      dockerfile: Dockerfile
+    container_name: lootify-bets
     hostname: bets.lootify.local
     environment:
-      - RELEASE_DISTRIBUTION=name
-      - RELEASE_NODE=bets@bets.lootify.local
-      - COOKIE=lootify_cookie
-      - DATABASE_URL=ecto://postgres:postgres@postgres/bets
+      DATABASE_URL: ecto://postgres:postgres@bets-db:5432/lootify_bets_dev
+      POOL_SIZE: "10"
+      ERLANG_COOKIE: lootify_super_secret_cookie
+      ELIXIR_ERL_OPTIONS: "-kernel inet_dist_listen_min 9000 inet_dist_listen_max 9010"
     depends_on:
-      - bets-db
+      bets-db:
+        condition: service_healthy
+    expose:
+      - "4369"
+      - "9000"
+      - "9001"
+      - "9002"
+      - "9003"
+      - "9004"
+      - "9005"
+      - "9006"
+      - "9007"
+      - "9008"
+      - "9009"
+      - "9010"
     networks:
-      - lootify-net
+      lootify-network:
+        aliases:
+          - bets.lootify.local
+    restart: unless-stopped
 
   gateway:
-    build: ./lootify-gateway
-    container_name: gateway
+    build:
+      context: ./lootify_gateway
+      dockerfile: Dockerfile
+    container_name: lootify-gateway
     hostname: gateway.lootify.local
+    ports:
+      - "4000:4000"
     environment:
-      - RELEASE_DISTRIBUTION=name
-      - RELEASE_NODE=gateway@gateway.lootify.local
-      - COOKIE=lootify_cookie
+      SECRET_KEY_BASE: super_secret_key_base_for_phoenix_change_in_production_must_be_at_least_64_bytes
+      PHX_HOST: localhost
+      PORT: "4000"
+      ERLANG_COOKIE: lootify_super_secret_cookie
+      ELIXIR_ERL_OPTIONS: "-kernel inet_dist_listen_min 9000 inet_dist_listen_max 9010"
+    expose:
+      - "4369"
+      - "9000"
+      - "9001"
+      - "9002"
+      - "9003"
+      - "9004"
+      - "9005"
+      - "9006"
+      - "9007"
+      - "9008"
+      - "9009"
+      - "9010"
+    depends_on:
+      - wallets
+      - users
+      - bets
     networks:
-      - lootify-net
-
+      lootify-network:
+        aliases:
+          - gateway.lootify.local
+    restart: unless-stopped
 
 volumes:
   wallets_data:
@@ -122,5 +206,5 @@ volumes:
   bets_data:
 
 networks:
-  lootify-net:
+  lootify-network:
     driver: bridge
